hw06/test/zm-outside-of-loop2.fmj
public int main() {
    int n = 2;
    while (n >= 0)
      if (n<=8) continue;
    continue; // error
    return n;
}
